admission/ValidatingAdmissionPolicy/policies/readinessprobe-tcpsocket-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readinessprobe-tcpsocket-host-initcontainers
  annotations:
    kubeapt.io/uuid: "965e99b1-6f57-4fb4-9550-eefd525a38dd"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
